--- a/standard/Dockerfile
+++ b/standard/Dockerfile
@@ -1,10 +1,9 @@
 FROM parrotsec/parrot-core:latest
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
+ENV VERSION 3.11-1
 
 # Install components
-RUN apt-get update; apt-get -y dist-upgrade
-RUN apt-get -y install parrot-pico
-RUN apt-get -y install parrot-mini parrot-tools-cloud
+RUN apt-get update; apt-get -y dist-upgrade;apt-get -y install parrot-pico;apt-get -y install parrot-mini parrot-tools-cloud
 
 ENTRYPOINT bash $@
