--- a/parrot/Dockerfile
+++ b/parrot/Dockerfile
@@ -1,7 +1,7 @@
 FROM parrotsec/parrot-core:latest
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
-ENV VERSION 3.11-1
+ENV VERSION 4.0.1
 
 # Install components
 RUN apt-get update; apt-get -y dist-upgrade;apt-get -y install parrot-pico;apt-get -y install parrot-mini parrot-tools-cloud
