minor fixes to build worker

--- a/sbuild-worker/Dockerfile
+++ b/sbuild-worker/Dockerfile
@@ -4,7 +4,7 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV VERSION 4.1
 
 # Install components
-RUN apt-get update; apt-get -y dist-upgrade;apt-get -y install sbuild devscripts ubuntu-dev-tools moreutils; rm -rf /var/lib/apt/lists/*
+RUN apt-get update; apt-get -y dist-upgrade;apt-get -y install sbuild devscripts debhelper ubuntu-dev-tools moreutils; rm -rf /var/lib/apt/lists/*
 
 # Add user
 RUN useradd -ms /bin/bash builder
