--- a/parrot-core/Dockerfile
+++ b/parrot-core/Dockerfile
@@ -1,15 +1,15 @@
-FROM debian:9
+FROM debian:buster-slim
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
-ENV VERSION 4.6-2
+ENV VERSION 4.6-3
 
 # Prepare environment
-RUN apt-get update;apt-get -y --no-install-recommends install apt-transport-https dirmngr gnupg apt-utils wget ca-certificates;echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections; rm -rf /var/lib/apt/lists/*
+RUN apt-get update;apt-get -y --no-install-recommends install apt-transport-https dirmngr gnupg apt-utils wget ca-certificates; rm -rf /var/lib/apt/lists/* #;echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
 
 # Migrate from Debian to Parrot
 RUN echo > /etc/apt/sources.list;\
 	echo "deb http://deb.parrotsec.org/parrot stable main contrib non-free" > /etc/apt/sources.list.d/parrot.list;\
-	wget -qO - https://archive.parrotsec.org/parrot/misc/parrotsec.gpg | apt-key add -;\
+	wget -qO - https://deb.parrotsec.org/parrot/misc/parrotsec.gpg | apt-key add -;\
 	apt-get update;\
 	apt-get -y dist-upgrade;\
 	rm -rf /var/lib/apt/lists/*
@@ -21,10 +21,6 @@ RUN apt-get update;\
 	apt-get -y autoremove;\
 	apt-get clean;\
 	apt-get autoclean;\
-	rm -rf /var/lib/apt/lists/*
-RUN apt-get update;\
-	apt-get -y full-upgrade;\
-	apt-get -y autoremove;\
 	rm -rf /var/lib/apt/lists/*
 
 ENTRYPOINT bash $@
