improve beef container

--- a/tools/beef/Dockerfile
+++ b/tools/beef/Dockerfile
@@ -4,6 +4,10 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV VERSION 0.5.0-4.8
 
 # Install components
-RUN apt-get update; apt-get -y dist-upgrade;apt-get -y --no-install-recommends install parrot-menu;apt-get -y install beef-xss; rm -rf /var/lib/apt/lists/*
+RUN apt-get update; apt-get -y dist-upgrade;apt-get -y --no-install-recommends install parrot-menu;apt-get -y install beef-xss geoip-database; rm -rf /var/lib/apt/lists/*
 
-ENTRYPOINT beef-xss $@
+COPY init.sh /init.sh
+
+RUN chmod +x /init.sh
+
+ENTRYPOINT /init.sh $@
