update core images

--- a/core/lts-armhf/Dockerfile
+++ b/core/lts-armhf/Dockerfile
@@ -1,7 +1,7 @@
-FROM parrotsec/core:base-lts-armhf
+FROM parrotsec/core:base-chimaera-armhf
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
-ENV VERSION 4.11-1
+ENV VERSION 5.0-alpha1
 
 # Update base image
 RUN	apt-get update;\
