--- a/core/rolling-amd64/Dockerfile
+++ b/core/rolling-amd64/Dockerfile
@@ -1,7 +1,7 @@
-FROM parrotsec/core:base-rolling-amd64
+FROM docker.io/parrotsec/core:base-rolling-amd64
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
-ENV VERSION 4.11-2
+ENV VERSION 4.11-3
 
 # Update base image
 RUN	apt-get update;\
