--- a/tools/beef/Dockerfile
+++ b/tools/beef/Dockerfile
@@ -1,4 +1,4 @@
-FROM parrotsec/core:rolling
+FROM docker.io/parrotsec/core:5.0
 MAINTAINER Lorenzo "Palinuro" Faletra (palinuro@linux.it)
 ENV DEBIAN_FRONTEND noninteractive
 ENV VERSION 0.5.0-4.11
